[package]
name = "dbus-native-channel"
version = "0.1.0"
authors = ["David Henningsson <diwic@ubuntu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustix = { version = "0.37.0", features = ["net", "process"] }
